# deep_learning_rampup

./: README.md  main.py  pyproject.toml
categorization_softmax/: classification.py  classification_argmax.py
linear_regression_jax/: main.py  mini_batches.py  mini_batches_vectorized.py  optimized_jax_mini_batches.py
linear_regression_np/: batched_gd.py  gradient_descent_simply.py  main.py  mini_batches.py  sgd.py
linear_regression_np/d2l_impl/: d2l_impl.py  data.py  linear_regression.py
linear_regression_vector/: linear_regression_vector_mlx.py  main.py
