[project]
name = "deep-learning-rampup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "d2l==1.0.3",
    "jax>=0.4.17",
    "jaxlib==0.4.17",
    "matplotlib>=3.7.2",
    "numpy>=1.23.5",
    "torch==2.0.0",
    "torchvision==0.15.1",
]
